add admin-page css

--- a/src/app/components/admin-page/admin-page.component.html
+++ b/src/app/components/admin-page/admin-page.component.html
@@ -1,4 +1,21 @@
 <div class="admin-page" >
+  <div class="user-page-header">
+    <img src="https://vtes-hook.com/media/kunena/avatars/resized/size200/users/avatar344.png?1567812743" alt="Admin" />
+      <div class="user-page-header-middle">
+        <h2>Admin</h2>
+        <p><span>Email:</span> HorrorRandom@gmail.com</p>
+      </div>
+      <div class="user-page-right">
+        <button mat-raised-button color="accent">
+          <mat-icon>
+            <span class="material-symbols-outlined"> mail </span>
+          </mat-icon>
+          Проверить сообщения
+        </button>
+      </div>
+    </div>
+
+
   <div class="user-page-button">
     <button (click)="activePage = 'film'">Новые фильмы</button>
     <button (click)="activePage = 'review'" class="review">Новые отзывы</button>
@@ -42,7 +59,4 @@
         </div>
       </div>
     </div>
-
-
-
-</div>
+  </div>
