--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -28,6 +28,7 @@
            </span>
         </mat-icon>
      </button>
+
   </div>
   <!---<div class="input-container">
     <div>
@@ -69,6 +70,18 @@
               </span>
            </mat-icon>
         </button>
+        <button
+        mat-stroked-button
+        color="white"
+        (click)="goToMessagePage()">
+        <mat-icon
+           aria-label="Example catalog icon"
+           >
+           <span class="material-symbols-outlined">
+           mail
+           </span>
+        </mat-icon>
+     </button>
      </ng-container>
 
      <ng-template #loginOrRegister>
@@ -92,6 +105,18 @@
             </span>
           </mat-icon>
     </button>
+     <button
+        mat-stroked-button
+        color="white"
+        (click)="goToMessagePage()">
+        <mat-icon
+           aria-label="Example catalog icon"
+           >
+           <span class="material-symbols-outlined">
+           mail
+           </span>
+        </mat-icon>
+     </button>
     </ng-template>
   </div>
 </div>
