--- a/src/app/components/message-page/message-page.component.html
+++ b/src/app/components/message-page/message-page.component.html
@@ -1,22 +1,20 @@
-<div *ngIf="message$ | async as message" class="message-page">
-  <div *ngFor="let item of message.messages" class="item-container">
+<div *ngIf="dialog$ | async as dialog" class="message-page">
+  <div *ngFor="let item of dialog.messages" class="item-container">
     <app-user-message-image [userId]="item.authorId"></app-user-message-image>
     <p>{{item.text}}</p>
   </div>
+
   <form [formGroup]="messageForm">
-    <div class="textarea-container">
+    <div class="textarea-container" *ngIf="user$ | async as user">
     <mat-dialog-content>
       <textarea matInput
-      formControlName="about"
-      cdkTextareaAutosize
-      #autosize="cdkTextareaAutosize"
-      cdkAutosizeMinRows="1"
-      cdkAutosizeMaxRows="10"></textarea>
+      formControlName="textMes"></textarea>
     </mat-dialog-content>
     <mat-dialog-actions>
       <button
            mat-stroked-button
-           color="white">
+           color="black"
+           (click)="sendMessage(user.id, dialog)">
            <mat-icon
               aria-label="Example logout icon"
               >
@@ -28,4 +26,5 @@
     </mat-dialog-actions>
   </div>
   </form>
+
 </div>
