--- a/src/app/components/user-message-image/user-message-image.component.html
+++ b/src/app/components/user-message-image/user-message-image.component.html
@@ -1,4 +1,7 @@
-<div class="author-container" routerLink="/user/{{user.id}}">
+
+<div *ngIf="user$ | async as user">
+  <div class="author-container" routerLink="/user/{{user.id}}">
   <img [src]="user.avatar" [alt]="user.name">
   <p>{{user.name}}</p>
+</div>
 </div>
