--- a/src/app/components/message-card/message-card.component.html
+++ b/src/app/components/message-card/message-card.component.html
@@ -1,22 +1,11 @@
- <div class="check-box-container" *ngIf="delVisibility">
+ <div class="check-box-container">
     <mat-checkbox
     color="accent"
     (change)="onCheckBoxChange(message.id)"
     >Удалить</mat-checkbox>
   </div>
   <div *ngIf="userF$ | async as userF" class="message-card" [ngClass]="{'new': !identification, 'old':identification}">
-    <button
-     mat-icon-button
-     color="accent"
-    (click)="changeBoolean()">
-    <mat-icon
-       aria-label="Example logout icon"
-       >
-       <span class="material-symbols-outlined">
-       menu
-       </span>
-    </mat-icon>
- </button>
+
   <div class="left-container">
     <div class="author-container">
       <img [src]="userF.avatar" [alt]="userF.name">
@@ -28,6 +17,7 @@
     </div>
   </div>
   <div class="right-container" (click)="goToMessage(message.id)">
+    <span>{{message.messages[0].timestamp|date:'medium'}}</span>
     <p>Тема: {{message.theme}}</p>
   </div>
 </div>
