--- a/src/app/components/messages-buttons-box/messages-buttons-box.component.html
+++ b/src/app/components/messages-buttons-box/messages-buttons-box.component.html
@@ -12,4 +12,18 @@
   </mat-icon>
   Написать письмо
   </button>
+
+  <button
+  mat-raised-button
+  color = "accent"
+  class = "random-button"
+  (click)="showElected()"
+  >
+  <mat-icon>
+  <span class="material-symbols-outlined">
+  star
+  </span>
+  </mat-icon>
+  Избранное
+  </button>
 </div>
