--- a/src/app/components/messages-buttons-box/messages-buttons-box.component.scss
+++ b/src/app/components/messages-buttons-box/messages-buttons-box.component.scss
@@ -2,6 +2,8 @@
   display: flex;
   flex-direction: column;
 button {
-  margin: 2em auto;
+  margin: 2em auto ;
+  width: 70%;
+  margin-bottom: 1em;
 }
 }
