--- a/src/app/components/messages-list/messages-list.component.scss
+++ b/src/app/components/messages-list/messages-list.component.scss
@@ -8,7 +8,7 @@
   border-bottom-right-radius: 100px;
   border: 2px solid black;
 
-  app-messages-buttons-box {
+  .messages-buttons-box {
     min-width: 250px;
     max-width: 250px;
     margin: 3em 0 3em 5%;
@@ -29,4 +29,14 @@
   button {
     margin: 1em 0;
   }
+}
+
+.button-box-container {
+  display: flex;
+  flex-direction: column;
+button {
+  margin: 2em auto ;
+  width: 70%;
+  margin-bottom: 1em;
+}
 }
