--- a/src/app/components/film-card/film-card.component.html
+++ b/src/app/components/film-card/film-card.component.html
@@ -1,16 +1,21 @@
 <div *ngIf="film">
   <ng-container *ngIf="user$ | async as user; else WithoutUser">
   <div class="film-container" [ngClass]="{'film-card': !inViewingList(film.id, user), 'film-card-w': inViewingList(film.id, user), 'film-card-v': inVetoList(film.id, user)}">
-
+<a routerLink="/catalog/{{ film.id }}">
     <img
       class="catalog-image"
       [src]="film.urlPoster"
       [alt]="film.title"
-      routerLink="/catalog/{{ film.id }}"
-    />
-    <p class="film-title">
+    /></a>
+    <ng-container *ngIf="film.rusTitle; else title">
+      <p class="film-title">
       {{ film.rusTitle | uppercase }} <span>({{ film.year }})</span>
+    </p></ng-container>
+    <ng-template #title>
+      <p class="film-title">
+      {{ film.title | uppercase }} <span>({{ film.year }})</span>
     </p>
+  </ng-template>
   </div>
 </ng-container>
 <ng-template #WithoutUser>
