--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -4,6 +4,23 @@
   display: flex;
   margin: 0 auto;
 
+  .input-container {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: black;
+
+    .input-search {
+      width: 70%;
+      height: 4vh;
+      margin: 2vh 0 1vh 0;
+      border-radius: 30px;
+      border: 2px solid white;
+      background-color: aliceblue;
+     }
+ }
+
 
 
 .title-container {
